--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,25 @@
-# This file is used by pip to install required python packages
-# Usage: pip install -r requirements.txt
-
-# Heroku environment
-gunicorn==19.1.1
-psycopg2==2.5.4
-
-# Flask Framework
 Flask==0.10.1
+Flask-Login==0.2.11
+Flask-Mail==0.9.1
+Flask-Migrate==1.3.0
 Flask-SQLAlchemy==2.0
-
-# Flask Packages
+Flask-Script==2.0.5
 Flask-User==0.6.1
 Flask-WTF==0.10.2
-
-# Development tools
+Jinja2==2.7.3
+Mako==1.0.1
+MarkupSafe==0.23
+SQLAlchemy==0.9.8
+WTForms==2.0.2
+Werkzeug==0.10.1
+alembic==0.7.4
+blinker==1.3
+gunicorn==19.1.1
+itsdangerous==0.24
+passlib==1.6.2
+psycopg2==2.5.4
+py==1.4.26
+py-bcrypt==0.4
+pycrypto==2.6.1
 pytest==2.6.3
-
+wsgiref==0.1.2
